[tool.poetry]
name = "distcuda"
version = "0.1.0"
description = "easily train/run tasks across various remote GPUs"
authors = ["Viraat Das <viraat.laldas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
